--- a/resume.tex
+++ b/resume.tex
@@ -73,28 +73,111 @@
 %==== Profile ====%
 \vspace*{-10pt}
 \begin{center}
-	{\Huge \scshape {Hasyimi Bahrudin}}\\
-	Kuala Lumpur, Malaysia $\cdot$ hasyimi@gatech.edu $\cdot$ +60 012 2302150 $\cdot$ https://www.linkedin.com/in/hasyimi-bahrudin/\\
+	{\Huge \scshape {Hasyimi Bahrudin}}
+	\\
+	Kuala Lumpur, Malaysia $\cdot$
+	hasyimi@gatech.edu $\cdot$
+	github.com/hasyimibhar $\cdot$
+	linkedin.com/in/hasyimi-bahrudin/
+	\\
 \end{center}
+
+%==== Summary ====%
+
+\begin{center}
+	Senior backend engineer with 10 years experience, with over 3 years of experience working remotely. Interested in building distributed systems. I am also obsessed with writing readable and testable code.
+\end{center}
+
+%==== Experience ====%
+\header{Work Experience}
+\vspace{1mm}
+
+\textbf{Beam} \hfill Kuala Lumpur, Malaysia\\
+\textit{Senior Software Engineer I (Vehicles)} \hfill May 2021 - Present\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item Moved to the vehicles team after reorganization. Work on backend projects related to vehicle IOT. Mostly in Go.
+	\item Built an IOT simulator, which allows the team to test our services without requiring physical IOT
+	\item Helped to reduce 70\% of unnecessary database writes, which was causing frequent downtime due to database bloat
+	\item Lead the microservice e2e testing project, which helped to improve developer confidence and productivity as we transition towards microservices. Most breaking changes are now caught before they get merged to master.
+	\item Helped to write a query translator for translating Postgresql to BigQuery SQL, which is helping our transition to BigQuery as data lake
+\end{itemize}
+\textbf{Beam} \hfill Kuala Lumpur, Malaysia\\
+\textit{Senior Software Engineer I (Product)} \hfill July 2020 - May 2021\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item Worked as full stack engineer, writing mostly Typescript (Node.js for backend, React Native for frontend)
+	\item Helped roll out 3DS payment in Malaysia, which improved add card success rate for Malaysia from 60\% to 80\%
+	\item Optimized PostGIS queries to take advantage of geospatial indexing, which reduced latency and database CPU usage
+	\item Implemented OpenAPI to improve API documentation and programmability, which improved developer experience
+\end{itemize}
+\textbf{Pollen} \hfill Kuala Lumpur, Malaysia\\
+\textit{Senior Software Engineer} \hfill January 2020 - May 2020\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item I was part of the pioneer engineers for a small pre-seed startup, writing mostly Typescript
+	\item Helped the team to adopt Docker for local development, which improved engineer workflow
+	\item Mentored junior engineers through PR reviews
+\end{itemize}
+\textbf{Perlin} \hfill Singapore (Remote)\\
+\textit{Core Engineer} \hfill August 2019 - January 2020\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item I was part of the core team that was implementing the Wavelet distributed consensus protocol
+	\item Replaced usage of LevelDB with Badger, which reduced write latency by 10x.
+	\item Optimized memory usage when syncing state.
+	\item Wrote a lot of tests, which increased test coverage from 40\% to 70\%
+\end{itemize}
+\textbf{WhatsHalal} \hfill Singapore (Remote)\\
+\textit{Senior Software Engineer} \hfill August 2018 - July 2019\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item I was part of the pioneer engineers for a small seed-funded startup. Used mostly Go.
+	\item Helped the company build a marketplace stack from scratch, which includes last mile delivery management
+	\item Mentored junior engineers through PR reviews
+\end{itemize}
+\pagebreak
+\textbf{KATSANA} \hfill Kuala Lumpur, Malaysia\\
+\textit{Full Stack Developer} \hfill 2016 - 2018\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item I was part of a team of full stack developers. Used mostly PHP (Laravel).
+	\item I led the project of building an in-house IOT server using Go, replacing an open-source server. This improved the overall performance of the product, and also gives us more control on how the server works.
+	\item Helped the team to revamp their dashboard to use WebSocket instead of polling, which improved overall performance
+\end{itemize}
+\textbf{Terato Tech} \hfill Bangi, Malaysia\\
+\textit{Games Programmer} \hfill 2012 - 2015\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item I was part of a small team of mobile game developers. Used mostly C++ (cocos2dx).
+	\item Built a pseudo-3D game engine (a-la F-Zero) for a mobile badminton game. Refer to this Youtube video.
+	\item Built a mobile game, which is a fusion of tower defense and mining (Minecraft) game. Not published.
+	\item Built an online card collecting mobile game for the Japanese market (similar to Fantastica) with a team of 1 game producer, 2 programmers, and 3 game artists. Not published.
+\end{itemize}
 
 %==== Education ====%
 \header{Education}
 \textbf{Georgia Institute of Technology}\hfill Georgia, Atlanta\\
-MS Computer Science \hfill Fall 2019 - Sprint 2023\\
+MS Computer Science \textit{GPA: (Ongoing)} \hfill Fall 2019 - Spring 2023\\
 \vspace{2mm}
 \textbf{Limkokwing University}\hfill Cyberjaya, Malaysia\\
 BS Games Technology \textit{GPA: 3.8} \hfill 2008 - 2011\\
 \vspace{2mm}
 
-
-
 \header{Skills}
 \begin{tabular}{ l l }
-	Programming Languages: & Go \\
+	Programming Languages: & Go, Java, Python, C++, C                                     \\
+	Areas of interest:     & Distributed computing, High performance computing, Compilers \\
 \end{tabular}
 \vspace{2mm}
 
-
+\header{Open Source Contributions}
+{\textbf{LLVM}} {\sl C++} \hfill reviews.llvm.org/people/commits/22060/\\
+Casual contributor to LLVM as an effort to improve my compilers knowledge. 1 accepted patch so far.\\
+\vspace*{2mm}
+{\textbf{Distributed 2D tiled engine}} {\sl Javascript} \hfill github.com/hasyimibhar/voffice-crdt\\
+Proof of concept for a distributed 2D tiled engine (virtual office) built on top of CRDT (yjs).\\
+\vspace*{2mm}
 
 
 
