--- a/resume.tex
+++ b/resume.tex
@@ -92,7 +92,7 @@
 \header{Work Experience}
 \vspace{1mm}
 
-\textbf{Beam} \hfill Kuala Lumpur, Malaysia\\
+\textbf{Beam} \hfill Kuala Lumpur, Malaysia (Remote)\\
 \textit{Senior Software Engineer I (Vehicles)} \hfill May 2021 - Present\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
@@ -102,7 +102,7 @@
 	\item Lead the microservice e2e testing project, which helped to improve developer confidence and productivity as we transition towards microservices. Most breaking changes are now caught before they get merged to master.
 	\item Helped to write a query translator for translating Postgresql to BigQuery SQL, which is helping our transition to BigQuery as data lake
 \end{itemize}
-\textbf{Beam} \hfill Kuala Lumpur, Malaysia\\
+\textbf{Beam} \hfill Kuala Lumpur, Malaysia (Remote)\\
 \textit{Senior Software Engineer I (Product)} \hfill July 2020 - May 2021\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
@@ -111,7 +111,8 @@
 	\item Optimized PostGIS queries to take advantage of geospatial indexing, which reduced latency and database CPU usage
 	\item Implemented OpenAPI to improve API documentation and programmability, which improved developer experience
 \end{itemize}
-\textbf{Pollen} \hfill Kuala Lumpur, Malaysia\\
+
+\textbf{Pollen} \hfill Kuala Lumpur, Malaysia (Remote)\\
 \textit{Senior Software Engineer} \hfill January 2020 - May 2020\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
@@ -119,6 +120,7 @@
 	\item Helped the team to adopt Docker for local development, which improved engineer workflow
 	\item Mentored junior engineers through PR reviews
 \end{itemize}
+
 \textbf{Perlin} \hfill Singapore (Remote)\\
 \textit{Core Engineer} \hfill August 2019 - January 2020\\
 \vspace{-1mm}
@@ -128,6 +130,7 @@
 	\item Optimized memory usage when syncing state.
 	\item Wrote a lot of tests, which increased test coverage from 40\% to 70\%
 \end{itemize}
+
 \textbf{WhatsHalal} \hfill Singapore (Remote)\\
 \textit{Senior Software Engineer} \hfill August 2018 - July 2019\\
 \vspace{-1mm}
@@ -136,6 +139,7 @@
 	\item Helped the company build a marketplace stack from scratch, which includes last mile delivery management
 	\item Mentored junior engineers through PR reviews
 \end{itemize}
+
 \pagebreak
 \textbf{KATSANA} \hfill Kuala Lumpur, Malaysia\\
 \textit{Full Stack Developer} \hfill 2016 - 2018\\
@@ -145,6 +149,7 @@
 	\item I led the project of building an in-house IOT server using Go, replacing an open-source server. This improved the overall performance of the product, and also gives us more control on how the server works.
 	\item Helped the team to revamp their dashboard to use WebSocket instead of polling, which improved overall performance
 \end{itemize}
+
 \textbf{Terato Tech} \hfill Bangi, Malaysia\\
 \textit{Games Programmer} \hfill 2012 - 2015\\
 \vspace{-1mm}
