--- a/resume.tex
+++ b/resume.tex
@@ -155,7 +155,7 @@
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item I was part of a small team of mobile game developers. Used mostly C++ (cocos2dx).
-	\item Built a pseudo-3D game engine (a-la F-Zero) for a mobile badminton game. Refer to this Youtube video.
+	\item Built a pseudo-3D game engine (a-la F-Zero) for a mobile badminton game.
 	\item Built a mobile game, which is a fusion of tower defense and mining (Minecraft) game. Not published.
 	\item Built an online card collecting mobile game for the Japanese market (similar to Fantastica) with a team of 1 game producer, 2 programmers, and 3 game artists. Not published.
 \end{itemize}
