Add personal interests

--- a/resume.tex
+++ b/resume.tex
@@ -184,7 +184,16 @@ Casual contributor to LLVM as an effort to improve my compilers knowledge. 1 acc
 Proof of concept for a distributed 2D tiled engine (virtual office) built on top of CRDT (yjs).\\
 \vspace*{2mm}
 
-
+\header{Personal Interests}
+{\textbf{Mechanical keyboards}} \\
+I own a split hand ergonomic keyboard, which I hand-wired myself.\\
+\vspace*{2mm}
+{\textbf{Coffee}} \\
+I brew my own coffee (V60, espresso). Recently started roasting my own beans too.\\
+\vspace*{2mm}
+{\textbf{Guitar}} \\
+I started playing guitar in 2020. I mostly play bossa nova on a classical guitar.\\
+\vspace*{2mm}
 
 \ 
 \end{document}
