--- a/resume.tex
+++ b/resume.tex
@@ -131,13 +131,11 @@
 	\item Wrote a lot of tests, which increased test coverage from 40\% to 70\%
 \end{itemize}
 
-\textbf{WhatsHalal} \hfill Singapore (Remote)\\
-\textit{Senior Software Engineer} \hfill August 2018 - July 2019\\
+\textbf{Self employed} \hfill Singapore (Remote)\\
+\textit{Freelance developer} \hfill August 2018 - July 2019\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item I was part of the pioneer engineers for a small seed-funded startup. Used mostly Go.
-	\item Helped the company build a marketplace stack from scratch, which includes last mile delivery management
-	\item Mentored junior engineers through PR reviews
+	\item Worked on a freelance projects
 \end{itemize}
 
 \pagebreak
