--- a/resume.tex
+++ b/resume.tex
@@ -131,11 +131,12 @@
 	\item Wrote a lot of tests, which increased test coverage from 40\% to 70\%
 \end{itemize}
 
-\textbf{Self employed} \hfill Singapore (Remote)\\
-\textit{Freelance developer} \hfill August 2018 - July 2019\\
+\textbf{Self employed} \hfill Kuala Lumpur, Malaysia (Remote)\\
+\textit{Freelance Developer} \hfill August 2018 - July 2019\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Worked on a freelance projects
+	\item Took a short break from working with startups
+	\item Worked on a few freelance projects
 \end{itemize}
 
 \pagebreak
