--- a/resume.tex
+++ b/resume.tex
@@ -131,7 +131,7 @@
 	\item Wrote a lot of tests, which increased test coverage from 40\% to 70\%
 \end{itemize}
 
-\textbf{Self employed} \hfill Kuala Lumpur, Malaysia (Remote)\\
+\textbf{Self-employed} \hfill Kuala Lumpur, Malaysia (Remote)\\
 \textit{Freelance Developer} \hfill August 2018 - July 2019\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
