--- a/resume.tex
+++ b/resume.tex
@@ -93,7 +93,16 @@
 \vspace{1mm}
 
 \textbf{Beam} \hfill Kuala Lumpur, Malaysia (Remote)\\
-\textit{Senior Software Engineer I (Vehicles)} \hfill May 2021 - Present\\
+\textit{Team Lead (Vehicles)} \hfill December 2021 - Present\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item Took over as the team lead for Vehicles team
+	\item Maintained vehicle locking/unlocking success rate at 99.5\% and p95 latency of 8 seconds
+	\item Lead projects to integrate new vehicle form factors to support market expansion
+	\item Mentored a small team of junior engineers
+\end{itemize}
+\textbf{Beam} \hfill Kuala Lumpur, Malaysia (Remote)\\
+\textit{Senior Software Engineer I (Vehicles)} \hfill May 2021 - November 2021\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item Moved to the vehicles team after reorganization. Work on backend projects related to vehicle IOT. Mostly in Go.
@@ -177,7 +186,7 @@ BS Games Technology \textit{GPA: 3.8} \hfill 2008 - 2011\\
 
 \header{Open Source Contributions}
 {\textbf{LLVM}} {\sl C++} \hfill reviews.llvm.org/people/commits/22060/\\
-Casual contributor to LLVM as an effort to improve my compilers knowledge. 1 accepted patch so far.\\
+Casual contributor to LLVM as an effort to improve my compilers knowledge.\\
 \vspace*{2mm}
 {\textbf{Distributed 2D tiled engine}} {\sl Javascript} \hfill github.com/hasyimibhar/voffice-crdt\\
 Proof of concept for a distributed 2D tiled engine (virtual office) built on top of CRDT (yjs).\\
@@ -193,6 +202,7 @@ I brew my own coffee (V60, espresso). Recently started roasting my own beans too
 {\textbf{Guitar}} \\
 I started playing guitar in 2020. I mostly play bossa nova on a classical guitar.\\
 \vspace*{2mm}
-
+{\textbf{Digital gardening}} \\
+I recently started digital gardening. You can read my notes at https://hasyimibahrudin.com.
 \ 
 \end{document}
