--- a/resume.tex
+++ b/resume.tex
@@ -93,16 +93,13 @@
 \vspace{1mm}
 
 \textbf{Beam} \hfill Kuala Lumpur, Malaysia (Remote)\\
-\textit{Team Lead (Vehicles)} \hfill December 2021 - Present\\
+\textit{Senior Software Engineer I (Data Platform)} \hfill October 2022 - Present\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Took over as the team lead for Vehicles team
-	\item Maintained vehicle locking/unlocking success rate at 99.5\% and p95 latency of 8 seconds
-	\item Lead projects to integrate new vehicle form factors to support market expansion
-	\item Mentored a small team of junior engineers
+	\item Setup internal workflow platform using Argo Workflow to replace Zapier for business automation
+	\item Work closely with operation teams around the world to empower business decisions with data
 \end{itemize}
-\textbf{Beam} \hfill Kuala Lumpur, Malaysia (Remote)\\
-\textit{Senior Software Engineer I (Vehicles)} \hfill May 2021 - November 2021\\
+\textit{Senior Software Engineer I (Vehicles)} \hfill May 2021 - September 2022\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item Moved to the vehicles team after reorganization. Work on backend projects related to vehicle IOT. Mostly in Go.
@@ -111,7 +108,6 @@
 	\item Lead the microservice e2e testing project, which helped to improve developer confidence and productivity as we transition towards microservices. Most breaking changes are now caught before they get merged to master.
 	\item Helped to write a query translator for translating Postgresql to BigQuery SQL, which is helping our transition to BigQuery as data lake
 \end{itemize}
-\textbf{Beam} \hfill Kuala Lumpur, Malaysia (Remote)\\
 \textit{Senior Software Engineer I (Product)} \hfill July 2020 - May 2021\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
