--- a/resume.tex
+++ b/resume.tex
@@ -85,7 +85,7 @@
 %==== Summary ====%
 
 \begin{center}
-	Senior backend engineer with 10 years experience, with over 3 years of experience working remotely. Interested in building distributed systems. I am also obsessed with writing readable and testable code.
+	Senior backend engineer with over 10 years experience, with over 5 years of experience working remotely. Interested in building distributed systems. I am also obsessed with writing readable and testable code.
 \end{center}
 
 %==== Experience ====%
@@ -96,7 +96,8 @@
 \textit{Senior Software Engineer I (Data Platform)} \hfill October 2022 - Present\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Setup internal workflow platform using Argo Workflow to replace Zapier for business automation
+	\item Changed team to explore data engineering and analytics
+	\item Rollout Argo Workflow to replace Zapier for business automation, reducing operational cost by 85\%
 	\item Work closely with operation teams around the world to empower business decisions with data
 \end{itemize}
 \textit{Senior Software Engineer I (Vehicles)} \hfill May 2021 - September 2022\\
@@ -167,7 +168,7 @@
 %==== Education ====%
 \header{Education}
 \textbf{Georgia Institute of Technology}\hfill Georgia, Atlanta\\
-MS Computer Science \textit{GPA: (Ongoing)} \hfill Fall 2019 - Spring 2023\\
+MS Computer Science \textit{GPA: (3.8)} \hfill Fall 2019 - Spring 2023 (expected to graduate May 2023)\\
 \vspace{2mm}
 \textbf{Limkokwing University}\hfill Cyberjaya, Malaysia\\
 BS Games Technology \textit{GPA: 3.8} \hfill 2008 - 2011\\
