--- a/resume.tex
+++ b/resume.tex
@@ -76,7 +76,7 @@
 	{\Huge \scshape {Hasyimi Bahrudin}}
 	\\
 	Kuala Lumpur, Malaysia $\cdot$
-	hasyimi@gatech.edu $\cdot$
+	hasyimi@hasyimibahrudin.com $\cdot$
 	github.com/hasyimibhar $\cdot$
 	linkedin.com/in/hasyimi-bahrudin/
 	\\
@@ -85,7 +85,7 @@
 %==== Summary ====%
 
 \begin{center}
-	Senior backend engineer with over 10 years experience, with over 5 years of experience working remotely. Interested in building distributed systems. I am also obsessed with writing readable and testable code.
+	Senior backend engineer with over 11 years of working experience, with over 5 years of experience working remotely. Love wearing many hats.
 \end{center}
 
 %==== Experience ====%
@@ -93,12 +93,21 @@
 \vspace{1mm}
 
 \textbf{Beam} \hfill Kuala Lumpur, Malaysia (Remote)\\
-\textit{Senior Software Engineer I (Data Platform)} \hfill October 2022 - Present\\
+\textit{Senior Software Engineer II (Data Platform)} \hfill March 2023 - Present\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item Promoted to SE2
+	\item Lead the implementation of dbt slim CI on top of Argo Workflow
+	\item Work closely with operation teams around the world to empower business decisions with data
+\end{itemize}
+\textit{Senior Software Engineer I (Data Platform)} \hfill October 2022 - February 2023\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item Changed team to explore data engineering and analytics
-	\item Rollout Argo Workflow to replace Zapier for business automation, reducing operational cost by 85\%
-	\item Work closely with operation teams around the world to empower business decisions with data
+	\item Familiar with BigQuery, ClickHouse, dbt, Argo Workflow
+	\item Rolled out Argo Workflow to replace Zapier for business automation, reducing operational cost by 85\%
+	\item Improved business metrics alerts using time-series anomaly detection, reducing false positives by 90\%
+	\item Migrated ELT workflows to dbt and Argo Workflow, improving data quality and cost control
 \end{itemize}
 \textit{Senior Software Engineer I (Vehicles)} \hfill May 2021 - September 2022\\
 \vspace{-1mm}
@@ -117,6 +126,8 @@
 	\item Optimized PostGIS queries to take advantage of geospatial indexing, which reduced latency and database CPU usage
 	\item Implemented OpenAPI to improve API documentation and programmability, which improved developer experience
 \end{itemize}
+
+\pagebreak
 
 \textbf{Pollen} \hfill Kuala Lumpur, Malaysia (Remote)\\
 \textit{Senior Software Engineer} \hfill January 2020 - May 2020\\
@@ -145,7 +156,6 @@
 	\item Worked on a few freelance projects
 \end{itemize}
 
-\pagebreak
 \textbf{KATSANA} \hfill Kuala Lumpur, Malaysia\\
 \textit{Full Stack Developer} \hfill 2016 - 2018\\
 \vspace{-1mm}
@@ -165,13 +175,15 @@
 	\item Built an online card collecting mobile game for the Japanese market (similar to Fantastica) with a team of 1 game producer, 2 programmers, and 3 game artists. Not published.
 \end{itemize}
 
+\pagebreak
+
 %==== Education ====%
 \header{Education}
 \textbf{Georgia Institute of Technology}\hfill Georgia, Atlanta\\
-MS Computer Science \textit{GPA: (3.8)} \hfill Fall 2019 - Spring 2023 (expected to graduate May 2023)\\
+MS Computer Science \textit{GPA: 3.7} \hfill Fall 2019 - Spring 2023\\
 \vspace{2mm}
 \textbf{Limkokwing University}\hfill Cyberjaya, Malaysia\\
-BS Games Technology \textit{GPA: 3.8} \hfill 2008 - 2011\\
+BS Games Technology \textit{GPA: 3.7} \hfill 2008 - 2011\\
 \vspace{2mm}
 
 \header{Skills}
